[FIX] website, website_sale: default theme adapt.
=== ISSUE 2 ===
Prior to this commit, `.o_wsale_offcanvas` had always white background,
which created color and contrast issue when the background page was
changed.

This commit fixes this issue by using preset color in
`.o_wsale_offcanvas`.

=== ISSUE 3 ===
Prior to this commit, `products_header` had margin issues between
buttons and inputs.

This commit fixes these issues using `gap-3`.

=== ISSUE 4 ===
Prior to this commit, the left column filter would hide overflowing
elements, creating a layout issue with outlines when buttons were
focused.

This commit fixes this issue by using paddings and negative margings to
compensate.

task-3097005

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -227,3 +227,6 @@ $o-navbar-nav-pills-link-border-radius: if(o-website-value('header-links-style')
 // Accordion
 $accordion-color: inherit !default;
 $accordion-bg: inherit !default;
+
+// Offcanvas
+$offcanvas-bg-color: $body-bg !default;
