--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1724,8 +1724,7 @@ input[value*="data-oe-translation-initial-sha"] {
     }
 }
 
-// Offcanvas menu for in page filters (e.g. product list)
-.o_website_offcanvas .accordion-button {
+.accordion-button {
     // Since this nav is visible on mobile only, remove all visual
     // effects related to keyboard/mouse navigation.
     &, &:focus, &:hover {
