--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -173,6 +173,10 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
 
     #o_wsale_offcanvas_content {
         @include o-wsale-scrollbar-subdle();
+
+        .list-group-item {
+            color: color-contrast($body-bg);
+        }
     }
 
     #products_grid_before {
